--- a/jupyterNotebook/20181205Hermeuptychia.ipynb
+++ b/jupyterNotebook/20181205Hermeuptychia.ipynb
@@ -2128,6 +2128,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### with qian's script\n",
+    "```\n",
+    "ls -1d /work/biophysics/jshen3/annotation/3639/15_annotate_homolog/exonerate/*_prots | awk '{printf \"cp -r %s . &\\n\", $1}' | bash\n",
+    "wait\n",
+    "ls -1 *_prots/*.fa | awk '{split($1, a, \"/\"); split(a[1], b, \"_\"); printf \"exonerate --model protein2genome --refine region -q %s -t genome.fa -Q protein -T dna --showtargetgff yes --showalignment yes --percent 30 > %s_aligns/%s.exonerate\\n\", $1, b[1], a[2]}' > input\n",
+    "wc -l input\n",
+    "split -l 7673 input input_ # Divide input file into 15 parts to allocate to 15 jobs, get the number by divide input lines to 15.\n",
+    "ls -1d *_prots | awk '{split($1, a, \"_\"); printf \"mkdir %s_aligns\\n\", a[1]}' | bash\n",
+    "ls -1 input_?? | awk '{split($1, a, \"_\"); printf \"%s\\n\", a[2]}' > list\n",
+    "python2 prepare_exenorate_jobs.py genome\n",
+    "ls -1 genome_??.job | awk '{printf \"sbatch %s\\n\", $1}' | bash\n",
+    "ls -1d *_aligns | awk '{split($1, a, \"_\"); printf \"cat %s/*.exonerate > %s.exonerate &\\n\", $1, a[1]}' | bash\n",
+    "wait\n",
+    "ls -1d *_aligns | awk '{split($1, a, \"_\"); printf \"python2 process_exonerate_out_to_prediction.py %s.exonerate homolog_%s.gff &\\n\", a[1], a[1]}' | bash\n",
+    "wait\n",
+    "ls -1 *_prots/*.fa | awk '{split($1, a, \"_\"); printf \"python2 fasta_letter_count.py %s >> %s_lens \\n\", $1, a[1]}' | bash\n",
+    "wait\n",
+    "ls -1d *_aligns | awk '{split($1, a, \"_\"); printf \"python2 select_complete_aligns.py %s &\\n\", a[1]}' | bash\n",
+    "wait\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### step 16_prepare_train_data"
    ]
   },
@@ -2178,6 +2205,59 @@
     "\n",
     "final result is   \n",
     "good_transcript_genome_homology.gff"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### with Qian's scripts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "gffread ../14_annotate_transcript/stringtie.merged.gtf -o stringtie.gff3\n",
+    "gffread /home/xcao/w/20181205Hermeuptychia/20181208QianPipeline/14_annotate_transcript/sample_mydb_pasa.sqlite.pasa_assemblies.gtf -o pasa.gff3\n",
+    "gffread /home/xcao/w/20181205Hermeuptychia/20181224QianPipleline_3318/14_annotate_transcript/3318_genomefilter1.fa.sqlite.pasa_assemblies.gtf -o pasa.gff3\n",
+    "python2 rewrite_pasa_gff.py pasa.gff3 > pasa.gff\n",
+    "cp ../15_annotate_homolog/*_good.gff ./\n",
+    "sed -i 's/gene/transcript/g' *_good.gff\n",
+    "\n",
+    "#Note: memory consumption huge.\n",
+    "python2 select_good_transcripts_step1.py bmo_good.gff pasa.gff > good_transcripts_bmo_pasa &\n",
+    "python2 select_good_transcripts_step1.py bmo_good.gff stringtie.gff3 > good_transcripts_bmo_tophat &\n",
+    "python2 select_good_transcripts_step1.py cne_good.gff pasa.gff > good_transcripts_cne_pasa &\n",
+    "python2 select_good_transcripts_step1.py cne_good.gff stringtie.gff3 > good_transcripts_cne_tophat &\n",
+    "python2 select_good_transcripts_step1.py dme_good.gff pasa.gff > good_transcripts_dme_pasa &\n",
+    "python2 select_good_transcripts_step1.py dme_good.gff stringtie.gff3 > good_transcripts_dme_tophat &\n",
+    "python2 select_good_transcripts_step1.py dpl_good.gff pasa.gff > good_transcripts_dpl_pasa &\n",
+    "python2 select_good_transcripts_step1.py dpl_good.gff stringtie.gff3 > good_transcripts_dpl_tophat &\n",
+    "python2 select_good_transcripts_step1.py hme_good.gff pasa.gff > good_transcripts_hme_pasa &\n",
+    "python2 select_good_transcripts_step1.py hme_good.gff stringtie.gff3 > good_transcripts_hme_tophat &\n",
+    "python2 select_good_transcripts_step1.py lac_good.gff pasa.gff > good_transcripts_lac_pasa &\n",
+    "python2 select_good_transcripts_step1.py lac_good.gff stringtie.gff3 > good_transcripts_lac_tophat &\n",
+    "python2 select_good_transcripts_step1.py pgl_good.gff pasa.gff > good_transcripts_pgl_pasa &\n",
+    "python2 select_good_transcripts_step1.py pgl_good.gff stringtie.gff3 > good_transcripts_pgl_tophat &\n",
+    "python2 select_good_transcripts_step1.py ppo_good.gff pasa.gff > good_transcripts_ppo_pasa &\n",
+    "python2 select_good_transcripts_step1.py ppo_good.gff stringtie.gff3 > good_transcripts_ppo_tophat &\n",
+    "python2 select_good_transcripts_step1.py pxu_good.gff pasa.gff > good_transcripts_pxu_pasa &\n",
+    "python2 select_good_transcripts_step1.py pxu_good.gff stringtie.gff3 > good_transcripts_pxu_tophat &\n",
+    "\n",
+    "cat good_transcripts_???_* > good_transcript_step1.gff\n",
+    "sed -i 's/StringTie/Cufflinks/g' good_transcript_step1.gff\n",
+    "python2 select_good_transcripts_step2.py\n",
+    "python2 select_good_transcripts_step3.py ../genome.fa\n",
+    "python2 select_good_transcripts_step4.py ../genome.fa\n",
+    "cp /home/xcao/w/20181205Hermeuptychia/20181208QianPipeline/12_mask_repeats/3303_repeats.gff ./repeats.gff\n",
+    "cp /home/xcao/w/20181205Hermeuptychia/20181224QianPipleline_3318/12_mask_repeats/3318_repeats.gff ./repeats.gff\n",
+    "python2 select_good_transcripts_step5.py repeats.gff\n",
+    "python2 select_good_transcripts_step6.py \n",
+    "python2 select_good_transcripts_step7.py \n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -2314,6 +2394,36 @@
     "cp ../train_snap/3318.dna ./\n",
     "python2 zff2glim.py ../train_snap/3318.ann > 3318.ann\n",
     "/home/xcao/p/GlimmerHMM/GlimmerHMM/train/trainGlimmerHMM 3318.dna 3318.ann -b 2 -d 3318 >& train.log\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### rerun 20190123\n",
+    "```\n",
+    "cd train_augustus/\n",
+    "export AUGUSTUS_CONFIG_PATH=/home/xcao/p/quast/quast-5.0.2/quast_libs/augustus3.2.3/config\n",
+    "export PATH=/home/xcao/p/quast/quast-5.0.2/quast_libs/augustus3.2.3/bin:$PATH\n",
+    "perl /home/xcao/p/quast/quast-5.0.2/quast_libs/augustus3.2.3/scripts/gff2gbSmallDNA.pl ../train_data.gff ../../genome.fa 1000 train_data.gb\n",
+    "perl /home/xcao/p/quast/quast-5.0.2/quast_libs/augustus3.2.3/scripts/randomSplit.pl train_data.gb 100\n",
+    "\n",
+    "\n",
+    "perl /home/xcao/p/quast/quast-5.0.2/quast_libs/augustus3.2.3/scripts/new_species.pl --species=3303\n",
+    "/home/xcao/p/quast/quast-5.0.2/quast_libs/augustus3.2.3/bin/etraining --species=3303 train_data.gb.train\n",
+    "/home/xcao/p/quast/quast-5.0.2/quast_libs/augustus3.2.3/bin/augustus --species=3303 train_data.gb.test | tee firsttest.out\n",
+    "perl /home/xcao/p/quast/quast-5.0.2/quast_libs/augustus3.2.3/scripts/optimize_augustus.pl --cpus=32 --species=3303 train_data.gb >& optimize.log & disown -h\n",
+    "# last step will take long. let in run in the background and train other programs\n",
+    "/home/xcao/p/quast/quast-5.0.2/quast_libs/augustus3.2.3/bin/etraining --species=3303 train_data.gb\n",
+    "\n",
+    "\n",
+    "perl /home/xcao/p/quast/quast-5.0.2/quast_libs/augustus3.2.3/scripts/new_species.pl --species=3318\n",
+    "/home/xcao/p/quast/quast-5.0.2/quast_libs/augustus3.2.3/bin/etraining --species=3318 train_data.gb.train\n",
+    "/home/xcao/p/quast/quast-5.0.2/quast_libs/augustus3.2.3/bin/augustus --species=3318 train_data.gb.test | tee firsttest.out\n",
+    "perl /home/xcao/p/quast/quast-5.0.2/quast_libs/augustus3.2.3/scripts/optimize_augustus.pl --cpus=32 --species=3318 train_data.gb >& optimize.log & disown -h\n",
+    "# last step will take long. let in run in the background and train other programs\n",
+    "/home/xcao/p/quast/quast-5.0.2/quast_libs/augustus3.2.3/bin/etraining --species=3318 train_data.gb\n",
     "```"
    ]
   },
