--- a/jupyterNotebook/testing.ipynb
+++ b/jupyterNotebook/testing.ipynb
@@ -56,17 +56,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "R",
-   "language": "R",
-   "name": "ir"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": "r",
-   "file_extension": ".r",
-   "mimetype": "text/x-r-source",
-   "name": "R",
-   "pygments_lexer": "r",
-   "version": "3.5.1"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
@@ -79,7 +83,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": false
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
